Se agrega redireccionamiento a la página index a todos los botones del nav

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img src="imagenes/Eydoc gif.gif" class="logo" alt="Logo animado Eydoc" id="logo-gif">
         <nav class="navbar">
             <a href="index.html">Eydoc</a>
-            <a href="#">Servicios</a>
-            <a href="#">Portafolio</a>
-            <a href="#">Nosotros</a>
-            <a href="#">Contáctanos</a>
+            <a href="index.html">Servicios</a>
+            <a href="index.html">Portafolio</a>
+            <a href="index.html">Nosotros</a>
+            <a href="index.html">Contáctanos</a>
         </nav>
     </header>
 
